// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostsItem should render empty 1`] = `null`;

exports[`PostsItem should render with node 1`] = `
<div
  className="PostsItem__PostItemSty-sc-1fceitp-0 jEkdwx"
>
  <h2>
    <div
      data-mock="Link"
    >
      {
  "to": "/blog/first"
}
      Some title
    </div>
  </h2>
  <div
    data-mock="PostDate"
  >
    10 May, 2018
  </div>
  <p
    dangerouslySetInnerHTML={
      Object {
        "__html": "Excerpt text",
      }
    }
  />
</div>
`;

exports[`PostsItem should render with slug when title not provided 1`] = `
<div
  className="PostsItem__PostItemSty-sc-1fceitp-0 jEkdwx"
>
  <h2>
    <div
      data-mock="Link"
    >
      {
  "to": "/blog/first"
}
      /first
    </div>
  </h2>
  <div
    data-mock="PostDate"
  >
    10 May, 2018
  </div>
  <p
    dangerouslySetInnerHTML={
      Object {
        "__html": "Excerpt text",
      }
    }
  />
</div>
`;
